--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
+    "expo-sqlite": "~10.0.3",
+    "expo-sqlite-orm": "^1.5.6",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
-    "react-native-web": "0.17.1",
-    "react-native-gesture-handler": "~1.10.2"
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
